kubernetes/v1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: exam
  name: exam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: exam
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: exam
    spec:
      containers:
      - image: exam:v1
        imagePullPolicy: IfNotPresent
        name: exam
        ports:
        - containerPort: 8080
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
