kubernetes/v1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: exam-ingress
spec:
  rules:
  - host: hello.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: exam
          servicePort: 8080
